Swagger purchase and smal fix for purchase
